[package]
name = "conventional-commits-changelog-generator"
description = "A CLI and library for generating the changelog based on conventional commits."
version = "0.0.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/conventional-commits-rs/conventional-commits-changelog-generator"
authors = ["Sven Lechner <SirWindfield@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "changelog"
path = "src/bin/changelog.rs"

[dependencies]
chrono = "0.4.13"
conventional-commits-next-semver = "0.1.1"
conventional-commits-parser = "0.1.1"
git2 = "0.13.8"
indoc = "1.0.2"
markdown-composer = "0.1.0"
pico-args = { version = "0.3.4", default-features = false }
semver = "0.10.0"

[patch.crates-io]
conventional-commits-parser = { path = "../conventional-commits-parser" }
markdown-composer = { path = "../markdown-composer" }
