[package]
name = "conventional-commits-changelog-generator"
description = "A CLI and library for generating the changelog based on conventional commits."
version = "0.1.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/conventional-commits-rs/conventional-commits-changelog-generator"
authors = ["Sven Lechner <SirWindfield@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "changelog"
path = "src/bin/changelog.rs"
required-features = ["cli"]

[dependencies]
cargo_toml = { version = "0.8.1", optional = true }
chrono = "0.4.13"
conventional-commits-next-semver = "0.1.1"
conventional-commits-parser = "0.1.1"
git2 = "0.13.8"
indoc = { version = "1.0.2", optional = true }
inventory = "0.1.7"
markdown-composer = "0.1.0"
pico-args = { version = "0.3.4", default-features = false, optional = true }
semver = "0.10.0"
thiserror = "1.0.20"
url = "2.1.1"

[features]
default = ["extractors"]
cli = ["indoc", "pico-args"]
extractors = ["extractor-cargo", "extractor-git"]
extractor-cargo = ["cargo_toml"]
extractor-git = []

[patch.crates-io]
conventional-commits-parser = { path = "../conventional-commits-parser" }
markdown-composer = { path = "../markdown-composer" }
